<resources>

    <string name="app_name">eXforU</string>
    <string name="preferences">Settings</string>
    <string name="xfavorite">Set favorite</string>
    <string name="myfavorite">My favorite pairs</string>
    <string name="candleshistory">Candles history</string>
    <string name="create_demo">Create DEMO account</string>
    <string name="add">Add</string>
    <string name="del">Del</string>
    <string name="again">Again</string>
    <string name="descimg">IMG</string>
    <string name="asktxt">Ask:</string>
    <string name="bidtxt">Bid:</string>
    <string name="profittxt">Profit:</string>
    <string name="changetxt">Change:</string>
    <string name="balancetxt">Balance:</string>
    <string name="ordertxt">Order:</string>
    <string name="positiontxt">Position:</string>
    <string name="positionalltxt">all positions at </string>
    <string name="pricetxt">Price:</string>
    <string name="textok">OK</string>
	<string name="textyes">Yes</string>
	<string name="textno">No</string>
	<string name="opentxt">Open:</string>
    <string name="closetxt">Close:</string>
    <string name="hightxt">High:</string>
    <string name="lowtxt">Low:</string>
    <string name="timetxt">Time:</string>
    <string name="voltxt">Vol:</string>
    <string name="volumetxt">Volume:</string>
    <string name="tptxt">TP:</string>
    <string name="sltxt">SL:</string>
    <string name="commenttxt">Comment:</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="sltptxt">SL/TP:</string>
    
    <string name="settings">Settings</string>
    <string name="prefrepuser">Preferences of broker and user</string>
	<string name="prefrep">Preferences of broker</string>
	<string name="prefuser">Preferences of user</string>
	<string name="prefother">Other Preferences</string>
	<string name="emailx_title">User email</string>
	<string name="emailx_summary">Email for creating account.</string>
	<string name="userid_title">User ID XStore DEMO</string>
	<string name="userid_summary">User ID for login to XStore Pro DEMO.</string>
	<string name="userpsw_title">User password XStore DEMO</string>
	<string name="userpsw_summary">User password for login to XStore Pro DEMO.</string>
	<string name="useridr_title">User ID XStore REAL</string>
	<string name="useridr_summary">User ID for login to XStore Pro REAL.</string>
	<string name="userpswr_title">User password XStore REAL</string>
	<string name="userpswr_summary">User password for login to XStore Pro REAL.</string>
	<string name="rpt_title">Repeating time of Favorite TXT Pairs</string>
	<string name="rpt_summary">Time in sec for repeating communication of Favorite TXT Pairs.</string>
	<string name="streamf_title">Streaming Time of Favorite pairs</string>
	<string name="streamf_summary">Streaming Time in sec for getting of Favorite Pairs.</string>
	<string name="account_title">Account for Login.</string>
	<string name="period_title">Default period</string>
	<string name="comment1_title">Comment number 1</string>
	<string name="comment2_title">Comment number 2</string>
	<string name="comment3_title">Comment number 3</string>
	<string name="comment_summary">Comment for trade.</string>
	<string name="startlot_title">Start lot</string>
	<string name="startlot_summary">Value of lot for start the buy or the sell.</string>
	<string name="steplot_title">Step change of lot</string>
	<string name="steplot_summary">Step change of lot by one clicking.</string>
	
	<string name="demobig">DEMO</string>
	<string name="realbig">REAL</string>
	<string name="modelbig">MODEL</string>

    
	<!-- Nav Drawer -->
	<string name="slider">Eng2App Slider</string>
	<string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
     
    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Favorite Pairs</item>
        <!--
        <item >All TXT Pairs</item>
        <item >Favorite TXT Pairs</item>
        <item >Stream EURUSD TXT</item>
        -->
        <item >Trade %s</item>
        <item >Candles history</item>
        <item >Set favorite</item>
        <item >Settings</item>
        <item >Create Demo</item>
        <!-- <item >Test</item> -->
    </string-array>
     
    <string name="app_name1">Slider Menu 1</string>
	<string name="app_name2">Slider Menu 2</string>
	<string name="desc_list_item_icon">Item Icon</string>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/item_circle</item>
        <item>@drawable/item_circle</item>
        <item>@drawable/item_circle</item>
        <item>@drawable/item_circle</item>
        <item>@drawable/item_circle</item>
        <item>@drawable/item_circle</item>
    </array>
    
    <string name="vystup">My output</string>
    <string name="progdata">Loading data. Please wait.</string>
    <string name="progtrade">Makeing trade. Please wait.</string>
    <string name="progdeltrade">Deleting trade. Please wait.</string>
    <string name="progmodtrade">Modifying trade. Please wait.</string>
    
    <string name="potrebujeteinternet">You must have an internet connection to use this function. Pleas connect and try again.</string>
	<string name="niejeinternet">Unable to connect</string>
	<string name="image_button_plus">+</string>
	<string name="tradeordered">Trade ordered</string>
	<string name="tradedeleted">Trade deleted</string>	
	<string name="tradeclosed">Trade closed</string>	
	<string name="trademodifyed">Trade modifyed</string>
	<string name="alltrademodifyed">All trades modifyed</string>
	<string name="tradenotmodifyed">Trade did not modify</string>
	<string name="deletetrade">Delete trade</string>
	<string name="wantdelete">Do you want to delete the trade ?</string>
	<string name="closetrade">Close trade</string>
	<string name="alltradeclosed">All trades closed</string>
	<string name="wantclose">Do you want to close the trade ?</string>
	<string name="closetrades">Close all trades</string>
	<string name="wantcloses">Do you want to close the trades ?</string>
	<string name="potrebujeteprice">Have to input the price of trade.</string>
	
	<string name="tradeorderednum">Trade  %s is ordered</string>
	<string name="tradedeletednum">Trade %s is deleted</string>
	<string name="tradeclosednum">Trade %s is closed</string>
	<string name="trademodifyednum">Tradee %s is modifyed</string>
	
	<!-- Slider Tab text -->
    <string-array name="slider_tab_text">
        <item >Candles</item>
        <item >Buy/Sell</item>
        <item >Trades</item>
        <item >Other</item>
    </string-array>
    
    <string name="btnbuy">Buy</string>
    <string name="btnsell">Sell</string>
    <string name="btnconfirmsell">Confirm Sell</string>
    <string name="btnconfirmbuy">Confirm Buy</string>
    
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="close">Close</string>
    <string name="modify">Modify</string>
    <string name="closeall">Close all at system</string>
    <string name="modifyall">Modify all at system</string>
    <string name="attention">Trading FX and/or CFDs on margin are high risk and not suitable for everyone. Losses can exceed investment.</string>


</resources>
