<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory android:title="@string/prefrep">
	    
		<ListPreference 
		    android:title="@string/account_title" 
		    android:defaultValue="0" 
		    android:entries="@array/account_names" 
		    android:entryValues="@array/account_values" 
		    android:key="accountx"/>
		
	</PreferenceCategory>
	
	<PreferenceCategory android:title="@string/prefuser">
	    

		
    	<EditTextPreference
        android:key="userid"
        android:defaultValue="0"
        android:enabled="true"
        android:summary="@string/userid_summary"
        android:title="@string/userid_title" />
    	
    	<EditTextPreference
        android:key="userpsw"
        android:defaultValue=""
        android:enabled="true"
        android:summary="@string/userpsw_summary"
        android:title="@string/userpsw_title" />
    	
    	<EditTextPreference
        android:key="useridr"
        android:defaultValue="0"
        android:enabled="true"
        android:summary="@string/useridr_summary"
        android:title="@string/useridr_title" />
    
    	<EditTextPreference
        android:key="userpswr"
        android:defaultValue=""
        android:enabled="true"
        android:summary="@string/userpswr_summary"
        android:title="@string/userpswr_title" />
    	
    	
		
	</PreferenceCategory>
</PreferenceScreen>