<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings" >
    
        
    <EditTextPreference
        android:key="userid"
        android:defaultValue="0"
        android:enabled="true"
        android:summary="@string/userid_summary"
        android:title="@string/userid_title" />
    
    <EditTextPreference
        android:key="userpsw"
        android:defaultValue=""
        android:enabled="true"
        android:summary="@string/userpsw_summary"
        android:title="@string/userpsw_title" />
    
    <EditTextPreference
        android:key="repeat"
        android:defaultValue="60"
        android:enabled="true"
        android:summary="@string/rpt_summary"
        android:title="@string/rpt_title" />
    
    <EditTextPreference
        android:key="streamf"
        android:defaultValue="60"
        android:enabled="true"
        android:summary="@string/streamf_summary"
        android:title="@string/streamf_title" />
    
    

</PreferenceScreen>