<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
       
    <item
        android:id="@+id/preferences"
        android:showAsAction="always"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/preferences">
    </item>
    
    <item
        android:id="@+id/xfavorite"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_favorite"
        android:title="@string/xfavorite">
    </item>
    
    <item
        android:id="@+id/xdemo"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_favorite"
        android:title="@string/demobig">
    </item>
    
    <item
        android:id="@+id/xreal"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_favorite"
        android:title="@string/realbig">
    </item>
    
    <item
        android:id="@+id/xmodel"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_favorite"
        android:title="@string/modelbig">
    </item>

</menu>
