<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    
    <android.support.v7.widget.Toolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#3DC49D"
        android:minHeight="?attr/actionBarSize"
        app:popupTheme="@style/PopupMenu">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            
            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:background="?attr/selectableItemBackground"
                android:padding="10dp"
                android:textSize="18sp"
        		android:textStyle="bold"
                android:text="@string/xfavorite"/>
           

            <TextView
                android:id="@+id/del"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:background="?attr/selectableItemBackground"
                android:padding="10dp"
                android:text="@string/del"/>

            <TextView
                android:id="@+id/add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/del"
                android:layout_centerInParent="true"
                android:background="?attr/selectableItemBackground"
                android:padding="10dp"
                android:text="@string/add"/>
            
            <Spinner
                android:id="@+id/spinner"
                android:visibility="visible"
                android:padding="10dp"
				android:layout_toLeftOf="@id/add"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

    </android.support.v7.widget.Toolbar>
    
    
    <RelativeLayout 
    android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    
    <ImageButton
    android:id="@+id/addButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"

    android:layout_alignParentBottom="true"
    android:layout_alignParentRight="true"

    android:contentDescription="@string/image_button_plus"
    android:src="@android:drawable/ic_input_add" />
    
    </RelativeLayout>

</LinearLayout>
