<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    
    <android.support.v7.widget.Toolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#3DC49D"
        android:minHeight="?attr/actionBarSize"
        app:popupTheme="@style/PopupMenu">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:background="?attr/selectableItemBackground"
                android:padding="10dp"
                android:textSize="18sp"
        		android:textStyle="bold"
                android:text="@string/myfavorite"/>
            
            <Button android:id="@+id/btnAgain"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:text="@string/again"
        		android:textSize="15sp"
        		android:layout_alignParentRight="true"
    			android:onClick="buttonAgain"/>

        </RelativeLayout>

    </android.support.v7.widget.Toolbar>
    
    	<LinearLayout android:layout_width="match_parent"
    		android:layout_height="wrap_content"
    		android:orientation="horizontal">
        
    	    	<TextView
				android:layout_width="0dp"
				android:text="@string/balancetxt"
				android:layout_height="wrap_content"
				android:layout_gravity="left"
				android:layout_weight="0.8"
        		android:paddingTop="6dip"
        		android:paddingLeft="6dip"
        		android:paddingBottom="6dip"
        		android:textSize="17sp"
        		android:textStyle="bold" />
    	    	
    	    	<TextView
        		android:id="@+id/sbalance"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_gravity="left"
				android:layout_weight="1.2"
        		android:paddingTop="6dip"
        		android:paddingLeft="6dip"
        		android:paddingBottom="6dip"
        		android:textSize="17sp"
        		android:textStyle="bold" />
        
    	    	<TextView
				android:layout_width="0dp"
				android:text="@string/profittxt"
				android:layout_height="wrap_content"
				android:layout_gravity="left"
				android:layout_weight="0.8"
        		android:paddingTop="6dip"
        		android:paddingLeft="6dip"
        		android:paddingBottom="6dip"
        		android:textSize="17sp"
        		android:textStyle="bold" />
    	    	
    	    	<TextView
        		android:id="@+id/sprofit"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_gravity="left"
				android:layout_weight="1.2"
        		android:paddingTop="6dip"
        		android:paddingLeft="6dip"
        		android:paddingBottom="6dip"
        		android:textSize="17sp"
        		android:textStyle="bold" />

        
        </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>
