<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    
    <RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="20dp"
    android:orientation="horizontal">
    
        <TextView
        android:id="@+id/balancetxt"
        android:text="@string/balancetxt"
		android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
		android:layout_gravity="left"
        android:paddingTop="1dip"
        android:paddingLeft="6dip"
        android:paddingRight="1dip"
        android:gravity="left"
        android:textSize="15sp"
        android:textColor="@drawable/black"
        android:textStyle="bold" />

        <TextView
        android:id="@+id/actbalance"
		android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/balancetxt"
		android:layout_gravity="left"
        android:paddingTop="1dip"
        android:paddingLeft="6dip"
        android:paddingRight="1dip"
        android:gravity="left"
        android:textSize="15sp"
        android:textColor="@drawable/black"
        android:textStyle="bold" />
        
    	<TextView
    	android:id="@+id/profittxt"
    	android:text="@string/profittxt"
		android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/actprofit"
		android:layout_gravity="right"
        android:paddingTop="1dip"
        android:paddingLeft="1dip"
        android:paddingRight="6dip"
        android:gravity="right"
        android:textSize="15sp"
        android:textColor="@drawable/black"
        android:textStyle="bold" />
    	
    	<TextView
    	android:id="@+id/actprofit"
		android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
		android:layout_gravity="right"
        android:paddingTop="1dip"
        android:paddingLeft="1dip"
        android:paddingRight="6dip"
        android:gravity="right"
        android:textSize="15sp"
        android:textColor="@drawable/black"
        android:textStyle="bold" />
        
    </RelativeLayout>
    
    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    
        <TextView
        android:text="@string/timetxt"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_gravity="left"
		android:layout_weight="1"
        android:paddingTop="6dip"
        android:paddingLeft="6dip"
        android:paddingRight="6dip"
        android:gravity="left"
        android:textSize="15sp"
        android:textColor="@drawable/black"
        android:textStyle="bold" />

        <TextView
        android:id="@+id/actprice"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_gravity="left"
		android:layout_weight="1"
        android:paddingTop="6dip"
        android:paddingLeft="6dip"
        android:paddingRight="6dip"
        android:gravity="left"
        android:textSize="18sp"
        android:textColor="@drawable/black"
        android:textStyle="bold" />
        
    	<TextView
    	android:text="@string/closetxt"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_gravity="right"
		android:layout_weight="1"
        android:paddingTop="6dip"
        android:paddingLeft="6dip"
        android:paddingRight="6dip"
        android:gravity="right"
        android:textSize="15sp"
        android:textColor="@drawable/black"
        android:textStyle="bold" />
        
    </LinearLayout>
    
    	<view class="com.eusecom.exforu.MyViewAct"
          	android:layout_width="fill_parent"
          	android:visibility="gone"
          	android:layout_height="20dp"
          	android:id="@+id/viewact"/>
    

    	<android.support.v7.widget.RecyclerView
        android:id="@+id/candlesrv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    	
</LinearLayout>
