<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    
    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    
        <TextView
        android:text="@string/balancetxt"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_gravity="left"
		android:layout_weight="1"
        android:paddingTop="6dip"
        android:paddingLeft="6dip"
        android:paddingRight="6dip"
        android:gravity="left"
        android:textSize="15sp"
        android:textColor="@drawable/black"
        android:textStyle="bold" />

        <TextView
        android:text="@string/pricetxt"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:layout_weight="1"
        android:paddingTop="6dip"
        android:paddingLeft="6dip"
        android:paddingRight="6dip"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="@drawable/black"
        android:textStyle="bold" />
        
    	<TextView
    	android:text="@string/profittxt"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_gravity="right"
		android:layout_weight="1"
        android:paddingTop="6dip"
        android:paddingLeft="6dip"
        android:paddingRight="6dip"
        android:gravity="right"
        android:textSize="15sp"
        android:textColor="@drawable/black"
        android:textStyle="bold" />
        
    </LinearLayout>
    
    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    
        <TextView
        android:id="@+id/actbalance"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_gravity="left"
		android:layout_weight="1"
        android:paddingTop="1dip"
        android:paddingLeft="1dip"
        android:paddingRight="1dip"
        android:gravity="left"
        android:textSize="15sp"
        android:textColor="@drawable/black"
        android:textStyle="bold" />

        <TextView
        android:id="@+id/actprice"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:layout_weight="1"
        android:paddingTop="1dip"
        android:paddingLeft="1dip"
        android:paddingRight="1dip"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="@drawable/black"
        android:textStyle="bold" />
        
    	<TextView
    	android:id="@+id/actprofit"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_gravity="right"
		android:layout_weight="1"
        android:paddingTop="1dip"
        android:paddingLeft="1dip"
        android:paddingRight="1dip"
        android:gravity="right"
        android:textSize="15sp"
        android:textColor="@drawable/black"
        android:textStyle="bold" />
        
    </LinearLayout>

    	<android.support.v7.widget.RecyclerView
        android:id="@+id/tradesrv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    	
</LinearLayout>
